Change font size in nav-menu to fix scroll on small screen sizes

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -78,7 +78,7 @@ header {
     font-family: 'DM Sans', sans-serif;
     display: flex;
     justify-content: center;
-    font-size: 80%;
+    font-size: 74%;
     font-weight: bold; 
     list-style-type: none;  
     height: 35px;
